<resources>
    <string name="app_name">MINI-CAP</string>

    <!--General purpose Strings-->
    <string name="backBTN">Back</string>
    <string name="confirmBTN">Confirm</string>
    <string name="cancelBTN">Cancel</string>
    <string name="editBTN">Edit</string>
    <string name="deleteBTN">Delete</string>
    <string name="saveBTN">Save</string>

    <!--Below this line you will find all the Strings related to the SessionActivity-->
    <string name="session_activity">Session Activity</string>
    <string name="session_status_not_started">Currently no session started</string>
    <string name="session_status_started">Current session with preset:</string>
    <string name="notification_tier">Current notification tier:</string>
    <string name="start_session_text">Start session</string>
    <string name="end_session_text">End session</string>
    <string name="pause_session_text">Pause session</string>
    <string name="continue_session_text">Continue session</string>
    <string name="time_remaining">Time remaining in current tier:</string>

    <string name="add_preset_text">Add Preset</string>
    <string name="edit_preset_text">Edit Preset</string>
    <string name="select_preset_title">Select a preset</string>

    <string name="default_clock">00:00</string>


    <!--Below this line you will find all the strings related to device connection-->
    <string name="sensor_bluetooth_exception">Bluetooth is off or unsupported.</string>
    <string name="sensor_scan_start">Scanning for sensor..</string>
    <string name="sensor_scan_timeout">No sensor found.</string>
    <string name="sensor_connection_initiated">Connecting to %1$s..</string>
    <string name="sensor_connection_connecting">Connecting %1$d%%..</string>
    <string name="sensor_connection_established">Connection established!</string>
    <string name="sensor_connection_disconnected">Disconnected.</string>
    <string name="sensor_connection_failed_retry">Connection lost. Please retry.</string>
    <string name="sensor_connection_failed_noretry">Connection lost. Incompatible hardware?</string>
    <string name="sensor_record_format">Current UV Index: %1$.1f. Illuminance: %2$.1flux.</string>

    <!--Below this line you will find all the Strings related to the PresetFragment-->
    <string name="create_preset">Create a Preset</string>
    <string name="edit_preset">Edit a Preset</string>
    <string name="preset_name_hint">Preset name</string>
    <string name="preset_age_hint">Your age</string>
    <string-array name="skinTone_set">
        <item>Light, pale white</item>
        <item>White, fair</item>
        <item>Medium white to light brown</item>
        <item>Olive, moderate brown</item>
        <item>Brown, dark brown</item>
        <item>Very dark brown to black</item>
    </string-array>

    <!--Below this line you will find all the strings related to the EditActivity-->
    <string name="edit_activity_header">Select a preset to edit</string>


</resources>