<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize"
    tools:context=".view.SessionActivity">

    <Button
        android:id="@+id/endSessionBTN"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/end_session_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sessionActivityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:text="@string/session_activity"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sessionStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:text="@string/session_status_not_started"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
        app:layout_constraintTop_toBottomOf="@+id/sessionActivityTextView" />

    <TextView
        android:id="@+id/timeRemainingTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:text="@string/time_remaining"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
        app:layout_constraintTop_toBottomOf="@+id/sessionActivityTextView" />

    <TextView
        android:id="@+id/notificationTierTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:text="@string/notification_tier"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
        app:layout_constraintTop_toBottomOf="@+id/sessionActivityTextView" />

    <Button
        android:id="@+id/startPauseSessionBTN"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/start_session_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/endSessionBTN" />

    <Button
        android:id="@+id/editUserBTN"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/edit_preset_text"
        app:layout_constraintBottom_toTopOf="@+id/startPauseSessionBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/addPresetBTN"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/addPresetBTN"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add_preset_text"
        app:layout_constraintBottom_toTopOf="@+id/startPauseSessionBTN"
        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_clock"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeRemainingTV" />

</androidx.constraintlayout.widget.ConstraintLayout>